codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_view__tests__security_view_aggressive.snap
---
source: tui/src/bottom_pane/security_view_tests.rs
expression: "snapshot(&view, 80)"
---
Security profiles — read only
Requested: Aggressive (configuration only)
Effective protection: unverified. Live security status is unavailable.
Protected modes are blocked; required controls are not qualified.

  Permissive
  Moderate
> Aggressive

Planned: all Moderate controls, plus deny sensitive access by default, narrow
expiring grants, and exact human approval for every sign or broadcast. Not
available yet.

↑/↓ explore · enter inspect · esc close
